--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -13,6 +13,9 @@
 	<img th:src="@{/images/TacoCloud.png}" alt="Taco Cloud Logo" />
 
 	<form class="container" method="POST" th:object="${taco}">
+		<span class="validationError"
+		      th:if="${#fields.hasErrors('ingredients')}"
+		      th:errors="*{ingredients}">Ingredients Error</span>
 		<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 place-items-center gap-5">
 			<div class="w-1/2">
 				<div class="ingredient-group" id="wraps">
@@ -85,6 +88,9 @@
 			<h3>Name your taco creation:</h3>
 			<label>
 				<input type="text" th:field="*{name}">
+				<span class="validationError"
+				      th:if="${#fields.hasErrors('name')}"
+				      th:errors="*{name}">Name Error</span>
 			</label>
 			<br />
 			<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Submit Your Taco</button>
