--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,8 +7,8 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 	<link rel="stylesheet" th:href="@{/css/styles.css}">
 	<title>Taco Cloud</title>
-	<script async src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
-	<script async th:src="@{/js/main.js}"></script>
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+	<script defer th:src="@{/js/main.js}"></script>
 	<script>
 		// On page load or when changing themes, best to add inline in `head` to avoid FOUC
 		if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
